# jviewer

./: .coverage  .flaskenv  .gitignore  .secrets.toml.example  README.md  README.rst  gunicorn.conf.py  pyproject.toml  pyrightconfig.json  settings.toml
.github/workflows/: lint.yml  mypy.yml  tests.yml
jviewer/: __init__.py  const.py  ext.py  forms.py  journal.py  views.py  wsgi.py
jviewer/static/css/: journal.css
jviewer/static/js/: journal.js
jviewer/templates/: index.html.j2  journal.html.j2  master.html.j2
tests/: .coverage  conftest.py  test_dummy.py  test_forms.py  test_journal.py  test_views.py
